--- a/.env.development
+++ b/.env.development
@@ -6,4 +6,4 @@ NEXT_PUBLIC_TOKEN_PASSWORD=D4$zw_rKCAzYX6R%
 NEXT_PUBLIC_HASURA_GRAPHQL_URL=http://10.4.10.2:8081/v1/graphql
 NEXT_PUBLIC_HASURA_ADMIN_SECRET=
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDOVJA-X0xPAjIqfeg6Ho80UwpfFeha49s
-NEXT_PUBLIC_ABANT_API_PROXY=https://apiproxy.abantsu.com.tr
+NEXT_PUBLIC_ABANT_API_PROXY=https://accountsapi.quickesta.com
