--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-select": "^5.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "env-cmd": "^10.1.0",
@@ -32,6 +33,7 @@
     "graphql": "^16.9.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
@@ -44,6 +46,8 @@
     "sonner": "^1.7.1",
     "styled-components": "^6.1.13",
     "styled-system": "^5.1.5",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
