--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@mui/material": "^6.3.0",
     "@mui/utils": "^6.3.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-google-maps/api": "^2.20.3",
+    "@tailwindcss/postcss": "^4.0.4",
     "@types/react-select": "^5.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -66,13 +69,13 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "file-loader": "^6.2.0",
     "mini-svg-data-uri": "^1.4.4",
-    "postcss": "^8",
+    "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "postcss-nesting": "^12.1.5",
     "postcss-preset-env": "^9.5.15",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "url-loader": "^4.1.1"
   },
