feat: changed envvs

--- a/.env.staging
+++ b/.env.staging
@@ -1,10 +1,8 @@
 PORT=3002
 NEXT_PUBLIC_APP_ENV=staging
-NEXT_PUBLIC_SITE_URL=http://10.4.10.2:3002
-NEXT_PUBLIC_TOKEN_USERNAME=Projen
-NEXT_PUBLIC_TOKEN_PASSWORD=D4$zw_rKCAzYX6R%
+NEXT_PUBLIC_SITE_URL=https://dashboard.visa.quickesta.com
 NEXT_PUBLIC_HASURA_GRAPHQL_URL=http://10.4.10.2:8081/v1/graphql
 NEXT_PUBLIC_HASURA_ADMIN_SECRET=
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDOVJA-X0xPAjIqfeg6Ho80UwpfFeha49s
-NEXT_PUBLIC_ABANT_API_PROXY=https://accountsapi.quickesta.com
+NEXT_PUBLIC_ABANT_API_PROXY=https://api.accounts.quickesta.com
 NEXTAUTH_SECRET=Ks3MoQ8pmViyYvPTTovQ2PamzwcHqwSijg6KFm64BHk=
