--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/postcss": "^4.0.4",
     "@types/react-select": "^5.0.0",
