--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@mui/material": "^6.3.0",
     "@mui/utils": "^6.3.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.20.3",
     "@tailwindcss/postcss": "^4.0.4",
     "@types/react-select": "^5.0.0",
@@ -37,7 +43,7 @@
     "graphql": "^16.9.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
