--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
+    "@hookform/resolvers": "^4.1.0",
     "@mui/base": "^5.0.0-beta.68",
     "@mui/material": "^6.3.0",
     "@mui/utils": "^6.3.0",
@@ -52,14 +53,17 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-select": "^5.9.0",
     "sonner": "^1.7.1",
     "styled-components": "^6.1.13",
     "styled-system": "^5.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "universal-cookie": "^7.2.0"
+    "universal-cookie": "^7.2.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
