--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "next-fonts": "^1.5.1",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
