--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.20.3",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.4",
     "@types/react-select": "^5.0.0",
     "axios": "^1.7.7",
@@ -58,7 +59,9 @@
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.2.0",
     "react-select": "^5.9.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "styled-components": "^6.1.13",
     "styled-system": "^5.1.5",
