--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   nginx:
@@ -6,45 +6,39 @@ services:
       context: .
       dockerfile: nginx/Dockerfile
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     depends_on:
-      - identity-service
+      - nextjs-app
     networks:
-      - identity-network
+      - quickesta-network
     restart: always
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/quickesta.com.pem:/etc/nginx/quickesta.com.pem
+      - ./nginx/quickesta.com.key:/etc/nginx/quickesta.com.key
 
-  quickesta-redis:
-    image: redis:latest
-    expose:
-      - "6379"
-    networks:
-      - identity-network
-    restart: always
-
-  identity-service:
+  nextjs-app:
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        - GITHUB_USERNAME=${GITHUB_USERNAME}
-        - GITHUB_TOKEN=${GITHUB_TOKEN}
+      dockerfile: nextjs/Dockerfile
     expose:
-      - "80"
+      - '3002'
     environment:
-      - ASPNETCORE_ENVIRONMENT=Docker
-      - ASPNETCORE_URLS=http://+:80
-      - GITHUB_USERNAME=${GITHUB_USERNAME}
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
-      - RedisCacheOptions__ConnectionString=quickesta-redis:6379
-      - RedisCacheOptions__DefaultCacheTime=6000
-    depends_on:
-      - quickesta-redis
+      - NODE_ENV=production
+      - PORT=3002
+      - NEXT_PUBLIC_APP_ENV=production
+      - NEXT_PUBLIC_SITE_URL=https://dashboard.visa.quickesta.com
+      - NEXT_PUBLIC_HASURA_GRAPHQL_URL=${NEXT_PUBLIC_HASURA_GRAPHQL_URL}
+      - NEXT_PUBLIC_HASURA_ADMIN_SECRET=${NEXT_PUBLIC_HASURA_ADMIN_SECRET}
+      - NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
+      - NEXT_PUBLIC_ABANT_API_PROXY=${NEXT_PUBLIC_ABANT_API_PROXY}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
     networks:
-      - identity-network
+      - quickesta-network
     restart: always
 
 networks:
-  identity-network:
-    name: identity-network
+  quickesta-network:
+    name: quickesta-network
     driver: bridge
