--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,41 @@
 server {
     listen 80;
+    server_name accounts.quickesta.com;
+    
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
     listen 443 ssl;
     server_name accounts.quickesta.com;
 
     ssl_certificate    	/etc/nginx/quickesta.com.pem;
     ssl_certificate_key    /etc/nginx/quickesta.com.key;
 
+    # Next.js application
     location / {
-        proxy_pass http://identity-service:80;
+        proxy_pass http://nextjs-app:3002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
+    # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers ECDH+AESGCM:ECDH+CHACHA20:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
-    add_header Strict-Transport-Security "max-age=31536000" always;
-}
-
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
+} 
