--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # NextJS environment variables
+PORT=3002
 NEXT_PUBLIC_HASURA_GRAPHQL_URL=https://hasura.abantsu.com.tr/v1/graphql
 NEXT_PUBLIC_HASURA_ADMIN_SECRET=your_hasura_admin_secret
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
