--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/react-select": "^5.0.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -45,6 +46,7 @@
     "firebase": "^10.14.0",
     "framer-motion": "^12.0.5",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
