feat: added quickesta-visa dash

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "metronic-tailwind-next",
+  "name": "quickesta-visa-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f .env.development next dev",
-    "staging": "env-cmd -f .env.staging next dev",
-    "start-dev": "env-cmd -f .env.development next start",
-    "start-staging": "env-cmd -f .env.staging next start",
-    "start-prod": "env-cmd -f .env next start",
+    "dev": "env-cmd -f .env.development next dev -p 3003",
+    "staging": "env-cmd -f .env.staging next dev -p 3003",
+    "start-dev": "env-cmd -f .env.development next start -p 3003",
+    "start-staging": "env-cmd -f .env.staging next start -p 3003",
+    "start-prod": "env-cmd -f .env next start -p 3003",
     "build-dev": "env-cmd -f .env.development next build",
     "build-staging": "env-cmd -f .env.staging next build",
     "build-prod": "env-cmd -f .env next build",
-    "start": "next start",
+    "start": "next start -p 3003",
     "lint": "next lint"
   },
   "dependencies": {
@@ -26,6 +26,8 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -43,6 +45,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "env-cmd": "^10.1.0",
     "firebase": "^10.14.0",
     "framer-motion": "^12.0.5",
@@ -58,6 +61,7 @@
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-leaflet": "^4.2.1",
