--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.4",
+    "@tanstack/react-table": "^8.21.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/react-select": "^5.0.0",
     "axios": "^1.7.7",
