--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name accounts.quickesta.com;
+    server_name business.quickesta.com;
     
     # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -8,7 +8,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name accounts.quickesta.com;
+    server_name business.quickesta.com;
 
     ssl_certificate    	/etc/nginx/quickesta.com.pem;
     ssl_certificate_key    /etc/nginx/quickesta.com.key;
